Make error styles more subtle

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -53,7 +53,7 @@
     }
 }
 
-.archetypeEditor .arechetypeCollapser{
+.archetypeEditor .archetypeCollapser{
     clear: both;
     height: 100%;
     margin-top: 10px;
@@ -238,13 +238,10 @@
 }
 
 .archetypeEditor .archetypeFieldsetError{
-    border: 1px solid red;
+    border: 1px solid #b94a48;
 }
 
 .archetypeEditor .archetypePropertyError{
-    border: 1px solid red;
-    background-color: #8b0000;
-    color: #fff;
     margin-bottom: 5px;
     padding-top: 3px;
     padding-bottom: 3px;
@@ -252,7 +249,8 @@
     label {
 
         span {
-            color: #fff;
+            color: #b94a48;
+            font-weight: bold;
         }
     }
 }
@@ -268,4 +266,10 @@
 
 .archetypeConfig .fieldsetIcon {
     margin-right: 10px;
+}
+
+.archetypeEditor .show-validation.ng-invalid .control-group.error .control-label {
+    span {
+        color: #343434;
+    }
 }
