--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -21,11 +21,20 @@
         font-weight: bold;
     }
 
-    &:hover {
+    label:hover {
+        cursor: default;
+    }
+
+    &.enableCollapsing:hover {
         cursor: pointer;
 
-        label span {
-            text-decoration: underline;
+        label  {
+            span { 
+                text-decoration: underline;
+            }
+            &:hover {
+                cursor: pointer;
+            }
         }
     }
 
