--- a/app/views/archetype.html
+++ b/app/views/archetype.html
@@ -15,9 +15,9 @@
 
                 <div class="archetypeFieldsetLabel" ng-class="{enableCollapsing: model.config.enableCollapsing}">
                     <div ng-click="focusFieldset(fieldset)" class="label-sub module-label">
-                        <span class="caret" ng-hide="fieldset.collapse"></span>
-                        <span class="caret caret-right" ng-show="fieldset.collapse"></span>
-                        
+                        <span class="caret" ng-hide="fieldset.collapse || !model.config.enableCollapsing"></span>
+                        <span class="caret caret-right" ng-show="fieldset.collapse && model.config.enableCollapsing"></span>
+
                         <label>
                             <i class="fieldsetIcon icon ng-class:fieldsetConfigModel.icon"></i>
                             <span ng-bind="getFieldsetTitle(fieldsetConfigModel, $index)"></span>
