Revert accidental(?) background-color change from eaf766c

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -6,6 +6,7 @@
     border: 1px solid #dddddd;
     padding: 0;
     margin-bottom: 5px;
+    background-color: #f1f1f1;
     clear: both;
     display: inline-block;
     width: 100%;
