Changed the property's help-text tag
from `<em>` to `<small>` - to match Umbraco's native style.

--- a/app/views/archetype.html
+++ b/app/views/archetype.html
@@ -36,7 +36,7 @@
                             <label ng-hide="archetypeConfig.hidePropertyLabels == '1'" class="control-label" for="archetype-property-{{model.alias}}-{{$parent.$index}}-{{$index}}">
                                 <span>{{property.label}}</span>
                                 <div class="archetypeFieldsetHelpText" ng-show="property.helpText">
-                                    <em>{{property.helpText}}</em>
+                                    <small>{{property.helpText}}</small>
                                 </div>
                             </label>
 
