Fix Umbraco's error style propagating to elements in our view

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -263,6 +263,13 @@
     border: 1px solid #b94a48;
 }
 
+.archetypeEditor .archetypeProperty {
+    label {
+        span {
+            color: #343434;
+        }
+    }
+}
 .archetypeEditor .archetypePropertyError{
     margin-bottom: 5px;
     padding-top: 3px;
