--- a/app/views/archetype.html
+++ b/app/views/archetype.html
@@ -25,7 +25,17 @@
                     </div>
 
                     <div class="archetypeEditorControls label-sub" ng-hide="model.config.hideFieldsetControls || model.config.maxFieldsets == '1'">
-                        <i class="icon icon-add" ng-click="addRow(fieldset.alias, $index)" ng-show="canAdd()"></i>
+                        <i class="icon icon-add dropdown-toggle" ng-click="addRow(fieldset.alias, $index)" ng-show="canAdd()" data-toggle="dropdown"></i>
+
+<ul class="dropdown-menu" style="margin-left: -100px;">
+            <li ng-repeat="fieldsetModel in model.config.fieldsets" ng-click="addRow(fieldsetModel.alias)">
+                <a href="#">
+                    <i class="fieldsetIcon icon ng-class:fieldsetModel.icon"></i>
+                    <span>{{fieldsetModel.label}}</span>
+                </a>
+            </li>
+        </ul>
+
                         <i class="icon icon-remove" ng-click="removeRow($index)" ng-show="canRemove()"></i>
                         <i class="icon icon-navigation handle" ng-show="canSort()"></i>
                     </div>
