--- a/app/views/archetype.html
+++ b/app/views/archetype.html
@@ -22,11 +22,11 @@
                     </div>
                     <div class="archetypeEditorControls label-sub" ng-hide="model.config.hideFieldsetControls">
                         <i class="icon icon-add dropdown-toggle" ng-show="canAdd()" data-toggle="dropdown"></i>
-                        <ul class="dropdown-menu" style="margin-left: -100px;">
+                        <ul class="dropdown-menu umb-actions">
                             <li ng-repeat="fieldsetModel in model.config.fieldsets" ng-click="addRow(fieldsetModel.alias, $index)">
                                 <a>
                                     <i class="fieldsetIcon icon ng-class:fieldsetModel.icon"></i>
-                                    <span>{{fieldsetModel.label}}</span>
+                                    <span class="menu-label">{{fieldsetModel.label}}</span>
                                 </a>
                             </li>
                         </ul>
