Expose current form to nested Archetypes

--- a/app/views/archetype.html
+++ b/app/views/archetype.html
@@ -37,7 +37,7 @@
                             </label>
 
                             <div class="controls">
-                                <archetype-property class="archetypeEditor ng-class:property.alias" property="property" fieldset-index="$parent.$index" fieldset="fieldset" archetype-config="model.config" property-config-index="$index" archetype-render-model="model.value" umbraco-property-alias="model.alias"></archetype-property>
+                                <archetype-property class="archetypeEditor ng-class:property.alias" property="property" fieldset-index="$parent.$index" fieldset="fieldset" archetype-config="model.config" property-config-index="$index" archetype-render-model="model.value" umbraco-property-alias="model.alias" umbraco-form = "form"></archetype-property>
                             </div>
                         </div>
                     </form>
