Fix 'hide property label'

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -4,6 +4,10 @@
     .dropdown-menu {
         top: auto;
     }
+
+    .controls-no-label {
+        padding: 10px;
+    }
 }
 
 .archetypeEditor fieldset{
