Implement #165 - enable/disable fieldsets

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -82,6 +82,9 @@
         span {
             display: inline-block;
         }
+        &.dimmed {
+            color: #d9d9d9;
+        }
     }
 }
 
@@ -112,6 +115,9 @@
             cursor: pointer;
             &.handle {
                 cursor: move;
+            }
+            &.dimmed {
+                color: #d9d9d9;
             }
         }
     }
@@ -299,6 +305,10 @@
         span {
             color: #343434;
         }
+        &.dimmed span {
+            color: #d9d9d9;
+        }
+
     }
 }
 .archetypeEditor .archetypePropertyError{
