--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -22,7 +22,7 @@
 
 .archetypeEditor .archetypeFieldsetLabel {
     position: relative;
-    width: 100%%;
+    width: 100%;
 
     .label-sub {
         padding: 8px 0;
@@ -33,11 +33,12 @@
     }
 
     .dropdown-menu {
+        position: relative;
         padding: 0;
         border-radius: 0;
         box-shadow: none;
         margin-top: -10px;
-        margin-left: -200px;
+        /*margin-left: -200px;*/
     }
 
     span {
@@ -95,6 +96,7 @@
     background-color: #fff;
     border-top: 1px solid silver;
     border-radius: 0 0 0 5px;
+    overflow: hidden;
 }
 
 .archetypeEditor .multiPropertyTextbox{
