Update some dropdown css

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -8,6 +8,10 @@
     .controls-no-label {
         padding: 10px;
     }
+
+    a+ul.dropdown-menu {
+        margin-left: 25px;
+    }
 }
 
 .archetypeEditor fieldset{
@@ -146,7 +150,7 @@
 
 .archetypeEditor .archetypeProperty{
     clear: both;
-    overflow: hidden;
+    overflow: visible;
     margin-top: 3px;
 }
 
